Expose dom-repeat's use of an invariant.

--- a/src/lib/template/dom-repeat.html
+++ b/src/lib/template/dom-repeat.html
@@ -240,7 +240,7 @@ Then the `observe` property should be configured as follows:
     ],
 
     observers: [
-      '_itemsChanged(items.*)'
+      '_itemsChanged(items.*, "foo")'
     ],
 
     created: function() {
